2012-02-07  Theppitak Karoonboonyanan  <thep@linux.thai.net>

	* src/thrend/thrend.c (th_render_cell_): Reformat source a little bit.

2012-01-18  Theppitak Karoonboonyanan  <thep@linux.thai.net>

	* data/tdict-proper.txt:
	* data/tdict-city.txt:
	* data/tdict-science.txt:
	* data/tdict-ict.txt:
	* data/tdict-common.txt: Add words.

	* data/tdic-proper.txt, data/tdict-history.txt: Move "ศรีวิชัย" to
	-history.

2012-01-18  Theppitak Karoonboonyanan  <thep@linux.thai.net>

	* configure.in: Post-release version suffix added.

2011-11-05  Theppitak Karoonboonyanan  <thep@linux.thai.net>

	* configure.in, NEWS:
	=== Version 0.1.16 ===

2011-11-05  Theppitak Karoonboonyanan  <thep@linux.thai.net>

	* configure.in:
	  - Remove remaining '$Id'.
	  - Remove unnecessary AC_SUBST(VERSION).

2011-11-05  Theppitak Karoonboonyanan  <thep@linux.thai.net>

	* -TODO: Removed, the plan is obsolete.

2011-11-05  Theppitak Karoonboonyanan  <thep@linux.thai.net>

	* README: Update project URL & e-mail.
	* configure.in: Use googlegroups as bug report address.

2011-11-05  Theppitak Karoonboonyanan  <thep@linux.thai.net>

	* configure.in: Add bug report address.

2011-11-05  Theppitak Karoonboonyanan  <thep@linux.thai.net>

	* data/tdict-history.txt:
	* data/tdict-proper.txt:
	* data/tdict-spell.txt:
	* data/tdict-common.txt: Add words.

	* data/tdict-country.txt: Use more popular short name for Saudi Arabia.

2011-10-25  Theppitak Karoonboonyanan  <thep@linux.thai.net>

	* data/tdict-common.txt, data/tdict-city.txt: "ไดฟุกุ" is city name.

2011-10-25  Theppitak Karoonboonyanan  <thep@linux.thai.net>

	* data/tdict-science.txt:
	* data/tdict-common.txt: Add words.

2011-09-03  Theppitak Karoonboonyanan  <thep@linux.thai.net>

	* data/tdict-proper.txt:
	* data/tdict-common.txt: Add words.

	* data/tdict-std.txt: Remove "มาย" which is rare but can potentially
	cause ambiguity (e.g. "มายกร่าง"). A valid compound, "เมามาย" is
	already in tdict-std-compound.txt.
